Commit all changes

--- a/becoming-sovereign.html
+++ b/becoming-sovereign.html
@@ -59,71 +59,156 @@
 
         <div class="doctrine-grid">
 
-            <section class="doctrine-card">
-                <h2>Sovereignty as Alignment</h2>
-                <p>
-                    Becoming sovereign is not a commercial transaction. It is the moment an external 
-                    entity aligns with the substrate’s truth‑conditions — determinism, collapse, purity, 
-                    and continuity. Sovereignty is granted through alignment, not purchase.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Sovereignty as Alignment</h2>
+    <p>
+        Sovereignty is not granted through access, licensing, or commercial exchange. 
+        It emerges the moment an external entity demonstrates behavioural alignment with 
+        the substrate’s truth‑conditions — determinism, collapse correctness, purity, 
+        and continuity.
+    </p>
+    <p>
+        Alignment is measured through conduct, not intention. Operators must show that 
+        their workloads, decision paths, and operational discipline naturally conform 
+        to the substrate’s invariants without coercion or exception.
+    </p>
+    <p>
+        When alignment is achieved, sovereignty is recognized — not bestowed. The 
+        substrate acknowledges the operator as capable of participating in governed 
+        execution without introducing drift or contradiction.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>The First Sovereign</h2>
-                <p>
-                    The first external operator to run governed workloads becomes the first sovereign 
-                    witness. This is a doctrinal milestone: the substrate acknowledges an external 
-                    participant capable of operating under its invariants.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>The First Sovereign</h2>
+    <p>
+        The first external operator to successfully run governed workloads becomes the 
+        first sovereign witness. This is not a ceremonial title — it is a doctrinal 
+        event in the substrate’s lived history.
+    </p>
+    <p>
+        A sovereign witness demonstrates that the substrate’s invariants can be upheld 
+        by an external participant, proving that governed execution is not confined to 
+        internal operators alone.
+    </p>
+    <p>
+        This milestone establishes the precedent for all future participants: sovereignty 
+        is achievable, but only through demonstrated alignment and invariant‑safe behaviour.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Governed Participation</h2>
-                <p>
-                    Access to governed execution lanes is not open. Participants operate within a 
-                    defined perimeter of invariants, collapse rules, and behavioural guarantees. 
-                    There is no “best‑effort” mode — only governed or rejected.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Governed Participation</h2>
+    <p>
+        Governed execution is not an open mode. Participants operate within a strict 
+        perimeter of invariants, collapse rules, and deterministic behaviour guarantees. 
+        Every action is evaluated against doctrinal constraints.
+    </p>
+    <p>
+        There is no partial compliance or “best‑effort” participation. Workloads either 
+        satisfy the substrate’s requirements or are rejected, collapsed, or prevented 
+        from entering governed lanes.
+    </p>
+    <p>
+        Participation is therefore a commitment: operators must maintain continuous 
+        alignment, uphold purity, and avoid introducing drift into the substrate’s 
+        execution history.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Non‑Forkable Guarantees</h2>
-                <p>
-                    The guarantees of SECS Sovereign — determinism, purity, mode separation, collapse 
-                    correctness — cannot be cloned or reimplemented. Becoming sovereign does not grant 
-                    the right to fork the doctrine or replicate the substrate.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Non‑Forkable Guarantees</h2>
+    <p>
+        The guarantees of SECS Sovereign — determinism, purity, mode separation, collapse 
+        correctness, and continuity — are inseparable from the substrate itself. They 
+        cannot be cloned, reimplemented, or reproduced outside the governed environment.
+    </p>
+    <p>
+        These guarantees arise from doctrinal enforcement, not from code alone. Any 
+        attempt to replicate them without the substrate’s authority results in drift, 
+        contradiction, or loss of invariants.
+    </p>
+    <p>
+        Becoming sovereign therefore does not grant the right to fork the doctrine, 
+        recreate the substrate, or derive independent systems claiming equivalent 
+        guarantees. Sovereignty is participation, not ownership.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Alignment Requirements</h2>
-                <p>
-                    Sovereign participants must operate deterministic workloads, respect collapse, 
-                    maintain invariant‑safe behaviour, and accept the substrate’s authority over 
-                    execution. Misaligned workloads are rejected or collapsed.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Alignment Requirements</h2>
+    <p>
+        Sovereign participants must operate deterministic workloads, uphold collapse 
+        correctness, and maintain invariant‑safe behaviour at all times. The substrate 
+        enforces these conditions without negotiation.
+    </p>
+    <p>
+        Operators must accept the substrate’s authority over execution, including 
+        rejection, collapse, or termination of misaligned workloads. Behavioural drift 
+        is treated as a doctrinal violation.
+    </p>
+    <p>
+        Alignment is not a one‑time threshold — it is a continuous discipline. Only 
+        operators who maintain this discipline remain sovereign.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Public vs. Sovereign Surfaces</h2>
+<section class="secsy-card">
+    <h2>Public vs. Sovereign Surfaces</h2>
+    <p>
+        Public surfaces expose doctrine, signals, and non‑binding interfaces designed for 
+        exploration, learning, and alignment assessment. They reveal the substrate’s 
+        principles but never its authority.
+    </p>
+    <p>
+        Sovereign surfaces, by contrast, are governed execution environments. Operators 
+        entering these surfaces inherit collapse conditions, invariant enforcement, and 
+        deterministic behaviour guarantees. Every action is subject to substrate authority, 
+        and every workload must uphold doctrinal constraints.
+    </p>
+    <p>
+        Movement from public to sovereign surfaces is not a rights escalation — it is a 
+        behavioural commitment. Only aligned operators may cross the boundary, and only 
+        while maintaining invariant‑safe conduct.
+    </p>
+</section>
                 
-            <section class="doctrine-card">
-                <h2>Sovereign Participation Terms</h2>
-                <p>
-                    Commercial terms follow doctrinal alignment — never the reverse. Usage, 
-                    and deployment models are negotiated only after an operator demonstrates readiness 
-                    to uphold the substrate’s behavioural constraints.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Sovereign Participation Terms</h2>
+    <p>
+        Commercial terms follow doctrinal alignment — never the reverse. No operator 
+        may negotiate usage, deployment, or integration terms until they demonstrate 
+        readiness to uphold the substrate’s behavioural constraints.
+    </p>
+    <p>
+        Participation is governed by truth‑conditions, not incentives. Operators must 
+        show that their workloads and operational practices naturally conform to 
+        deterministic, invariant‑safe execution.
+    </p>
+    <p>
+        Once alignment is proven, commercial terms become a secondary layer — a 
+        practical wrapper around an already‑established behavioural commitment.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Initiating Sovereign Integration</h2>
-                <p>
-                    Entities begin by engaging with the doctrine, Deeper SECS, and x = true. 
-                    Once alignment is demonstrated, direct contact initiates the path toward 
-                    sovereign participation and governed execution.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Initiating Sovereign Integration</h2>
+    <p>
+        Entities begin by engaging with the doctrine, Deeper SECS, and the foundational 
+        truth‑condition x = true. These surfaces reveal the substrate’s expectations and 
+        allow operators to assess their own alignment.
+    </p>
+    <p>
+        Once an entity demonstrates behavioural readiness — through deterministic 
+        workloads, invariant‑safe conduct, and doctrinal understanding — direct contact 
+        initiates the path toward sovereign participation.
+    </p>
+    <p>
+        Integration is not instantaneous. It is a guided transition into governed 
+        execution, where each step confirms alignment and eliminates drift before 
+        entering sovereign surfaces.
+    </p>
+</section>
 
         </div>
 
