--- a/deeper-secs.html
+++ b/deeper-secs.html
@@ -59,86 +59,170 @@
 
         <div class="doctrine-grid">
 
-            <section class="doctrine-card">
-                <h2>The 24‑Hour Governed Burn</h2>
-                <p>
-                    A continuous 24‑hour execution burn validated determinism, collapse correctness, 
-                    timing envelopes, and substrate purity. Governed mode held <strong>4.0 RPS exactly</strong> 
-                    with <strong>0.00 stdev</strong>, zero burst leakage, zero jitter accumulation, and zero drift.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>The 24‑Hour Governed Burn</h2>
+    <p>
+        A continuous 24‑hour execution burn validated the substrate’s core guarantees: 
+        determinism, collapse correctness, timing‑envelope stability, and purity under 
+        uninterrupted load. Governed mode held <strong>4.0 RPS exactly</strong> with 
+        <strong>0.00 stdev</strong>, demonstrating that drift is not merely controlled — 
+        it is structurally impossible.
+    </p>
+    <p>
+        No burst leakage, jitter accumulation, or envelope violations occurred across the 
+        entire burn. The substrate maintained perfect temporal discipline, proving that 
+        governed execution is not probabilistic or best‑effort, but a deterministic 
+        physics with measurable invariants.
+    </p>
+    <p>
+        This burn serves as a reference behaviour: a canonical fingerprint of how the 
+        substrate behaves when fully aligned. Any deviation from this pattern is treated 
+        as evidence of impurity, misalignment, or external interference.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Mode Separation in Practice</h2>
-                <p>
-                    Governed and ungoverned workloads coexisted without contamination. During the burn, 
-                    <strong>10 governed workers</strong> and <strong>724,582 ungoverned workers</strong> 
-                    shared the substrate with no fairness bleed, no collapse events, and no behavioural leakage.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Mode Separation in Practice</h2>
+    <p>
+        Governed and ungoverned workloads coexisted without contamination. During the burn, 
+        <strong>10 governed workers</strong> and <strong>724,582 ungoverned workers</strong> 
+        shared the substrate with zero fairness bleed, zero collapse events, and zero 
+        behavioural leakage.
+    </p>
+    <p>
+        This separation is not enforced through heuristics or scheduling tricks. It is a 
+        doctrinal boundary: governed mode inherits invariants, while ungoverned mode 
+        inherits freedom. Neither can influence the other’s behaviour.
+    </p>
+    <p>
+        The result is a substrate where purity is preserved even in mixed‑mode environments. 
+        Mode separation is therefore not a feature — it is a structural truth.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Purity Under Load</h2>
-                <p>
-                    Across the entire burn, impurity did not survive execution. No nondeterminism entered 
-                    governed mode. No drift accumulated. No collapse boundaries were breached. 
-                    Purity was preserved as a structural invariant.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Purity Under Load</h2>
+    <p>
+        Across the entire burn, impurity did not survive execution. No nondeterminism 
+        entered governed mode. No drift accumulated. No collapse boundaries were breached. 
+        Purity held as a structural invariant.
+    </p>
+    <p>
+        The substrate actively rejects behaviours that violate determinism or continuity. 
+        Impurity is not tolerated, mitigated, or compensated for — it is eliminated through 
+        collapse or non‑admission.
+    </p>
+    <p>
+        This demonstrates that purity is not a target state but a maintained condition. 
+        The substrate enforces it continuously, ensuring that governed execution remains 
+        mathematically stable.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>The Permatest Beacon</h2>
-                <p>
-                    The continuous integrity test of the substrate. The beacon validated deterministic 
-                    timing envelopes (~33.6 µs average latency), zero envelope violations, deterministic 
-                    state transitions, and continuous stability fingerprints.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>The Permatest Beacon</h2>
+    <p>
+        The Permatest Beacon is the substrate’s continuous integrity test — a live probe 
+        that validates deterministic timing envelopes, state transitions, and stability 
+        fingerprints. During the burn, it recorded ~33.6 µs average latency with zero 
+        envelope violations.
+    </p>
+    <p>
+        The beacon does not measure performance; it measures truth. It confirms that the 
+        substrate’s behaviour remains invariant across time, load, and topology.
+    </p>
+    <p>
+        As long as the beacon holds, the substrate is considered stable. Any deviation 
+        triggers investigation, collapse, or isolation to preserve the truth‑state.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Deterministic Dispatch</h2>
-                <p>
-                    Dispatch remained invariant under load, topology, and time. Workers executed without 
-                    drift, without jitter, and without topology‑dependent behaviour. Determinism held 
-                    across all execution windows.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Deterministic Dispatch</h2>
+    <p>
+        Dispatch remained invariant under load, topology, and time. Workers executed 
+        without drift, jitter, or topology‑dependent behaviour. Determinism held across 
+        all execution windows.
+    </p>
+    <p>
+        This behaviour proves that dispatch is not influenced by identity, locality, or 
+        probabilistic fairness. It is governed by invariant‑safe rules that produce the 
+        same outcome regardless of external conditions.
+    </p>
+    <p>
+        Deterministic dispatch is therefore a cornerstone of the substrate’s physics — 
+        a guarantee that execution paths remain stable and predictable.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Collapse Boundaries</h2>
-                <p>
-                    Divergence was detected, isolated, and collapsed before it could propagate. 
-                    Collapse is not an error — it is a governance instrument that restores invariants 
-                    and preserves the substrate’s truth‑state.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Collapse Boundaries</h2>
+    <p>
+        Divergence was detected, isolated, and collapsed before it could propagate. 
+        Collapse is not an error — it is a governance instrument that restores invariants 
+        and preserves the substrate’s truth‑state.
+    </p>
+    <p>
+        Collapse boundaries define the limits of acceptable behaviour. When a workload 
+        crosses these boundaries, the substrate intervenes immediately and deterministically.
+    </p>
+    <p>
+        This ensures that impurity cannot accumulate, drift cannot spread, and the 
+        substrate’s lived history remains coherent.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Continuity Markers</h2>
-                <p>
-                    Deterministic checkpoints that anchor narrative closure, replay points, and 
-                    reconciliation boundaries. Continuity markers ensure that the substrate’s 
-                    lived history remains coherent and auditable.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Continuity Markers</h2>
+    <p>
+        Continuity markers are deterministic checkpoints that anchor narrative closure, 
+        replay points, and reconciliation boundaries. They ensure that the substrate’s 
+        lived history remains coherent and auditable.
+    </p>
+    <p>
+        These markers allow the substrate to reconstruct truth even after collapse, 
+        topology changes, or external disturbances. They are the backbone of continuity.
+    </p>
+    <p>
+        Without continuity markers, the substrate would lose its ability to maintain 
+        a stable narrative. With them, history becomes a governed asset.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Topology‑Free Behaviour</h2>
-                <p>
-                    The substrate executed identically across all worker topologies. No noisy neighbours, 
-                    no scheduling heuristics, no probabilistic fairness. Behaviour remained invariant 
-                    regardless of physical layout.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Topology‑Free Behaviour</h2>
+    <p>
+        The substrate executed identically across all worker topologies. No noisy 
+        neighbours, no scheduling heuristics, no probabilistic fairness. Behaviour 
+        remained invariant regardless of physical layout.
+    </p>
+    <p>
+        This proves that the substrate does not rely on locality or topology to maintain 
+        determinism. Execution is governed by invariants, not by infrastructure.
+    </p>
+    <p>
+        Topology‑free behaviour is therefore a signature of the substrate’s physics — 
+        a guarantee that execution remains stable even as the environment changes.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Identity‑Free Execution</h2>
-                <p>
-                    The substrate does not know identity, tenancy, or routing. It knows only behaviour, 
-                    mode, and invariants. This enables deterministic fairness and eliminates 
-                    identity‑dependent drift.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Identity‑Free Execution</h2>
+    <p>
+        The substrate does not know identity, tenancy, or routing. It knows only 
+        behaviour, mode, and invariants. This enables deterministic fairness and 
+        eliminates identity‑dependent drift.
+    </p>
+    <p>
+        By removing identity from execution, the substrate prevents bias, leakage, and 
+        behavioural contamination. All workloads are evaluated solely on their 
+        alignment with truth‑conditions.
+    </p>
+    <p>
+        Identity‑free execution is therefore a doctrinal requirement: fairness emerges 
+        from ignorance, and determinism emerges from constraint.
+    </p>
+</section>
 
         </div>
 
