--- a/doctrinal-secs.html
+++ b/doctrinal-secs.html
@@ -58,32 +58,32 @@
 
         <div class="doctrine-grid">
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Continuity</h2>
                 <p>Continuity ensures a verifiable, auditable progression of state across execution windows so systems can be reconciled deterministically.</p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Deterministic Propagation</h2>
                 <p>Deterministic propagation means identical inputs produce identical state transitions, enabling reproducibility and low‑drift replication.</p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Governance</h2>
                 <p>Governance defines how changes to governed lanes are proposed, reviewed, and enacted — keeping the substrate aligned with stakeholder intent.</p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Zero‑Drift</h2>
                 <p>Zero‑drift is the commitment that, barring explicit governance changes, system state remains synchronized across replicas.</p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Narrative Closure</h2>
                 <p>Narrative closure defines how episodes of activity are concluded and archived as part of the continuity model.</p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Doctrine as Foundation</h2>
                 <p>The doctrine is the philosophical substrate that guides design choices, operational guarantees, and the project’s public commitments.</p>
             </section>
