--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             gtag('config', 'G-667KK00S7H');
         </script>
 </head>
-<body>
+<body class="index">
     <!-- Animated Grid Background -->
     <div class="grid-bg"></div>
     <div class="gradient-overlay"></div>
@@ -364,52 +364,79 @@
 
 
 
-<!-- SECSy Section -->
 <section id="secsy" class="doctrinal-surface secsy-surface">
     <div class="doctrine-grid secsy-grid">
 
-        <div class="doctrine-card secsy-header">
+        <div class="secsy-card secsy-header">
             <h2 class="doctrine-title glitch-title" data-text="When SECS = true">
-                When SECS = true
+                When<BR>SECS = true
             </h2>
             <p class="doctrine-subtitle">
                 A new mode of system behaviour emerges.
             </p>
         </div>
 
-        <div class="doctrine-card secsy-card">
-            <h3>Continuity Becomes Inevitable</h3>
-            <p>Systems stop “trying” to stay in sync. Continuity asserts itself as a structural property.</p>
+        <div class="secsy-card">
+            <h3>Continuity<br>Becomes Inevitable</h3>
+            <p>
+                Systems stop “trying” to stay aligned. Continuity asserts itself as a
+                structural property, not a best‑effort goal.
+            </p>
         </div>
 
-        <div class="doctrine-card secsy-card">
-            <h3>Drift Disappears</h3>
-            <p>No more replicas wandering off. Zero‑drift becomes the default state.</p>
+        <div class="secsy-card">
+            <h3>Drift<BR>Disappears</h3>
+            <p>
+                Replicas no longer wander. Zero‑drift becomes the natural state of
+                execution, not an achievement.
+            </p>
         </div>
 
-        <div class="doctrine-card secsy-card">
-            <h3>Truth Enforces Itself</h3>
-            <p>Inputs are evaluated, not trusted. Outputs are deterministic, not probabilistic.</p>
+        <div class="secsy-card">
+            <h3>Truth<br>Enforces Itself</h3>
+            <p>
+                Inputs are evaluated before entry. Outputs become deterministic by
+                design, eliminating probabilistic behaviour entirely.
+            </p>
         </div>
 
-        <div class="doctrine-card secsy-card">
-            <h3>Collapse Becomes Safety</h3>
-            <p>Collapse restores purity and re‑anchors continuity.</p>
+        <div class="secsy-card">
+            <h3>Collapse<br>Becomes Safety</h3>
+            <p>
+                Collapse stops being failure. It becomes the mechanism that restores
+                purity and re‑anchors continuity.
+            </p>
         </div>
 
-        <div class="doctrine-card secsy-card">
-            <h3>Execution Becomes Governed</h3>
-            <p>Execution follows doctrine, not circumstance.</p>
+        <div class="secsy-card">
+            <h3>Execution<br>Becomes Governed</h3>
+            <p>
+                Execution follows doctrine instead of circumstance. Behaviour is shaped
+                by invariants, not environment.
+            </p>
         </div>
 
-        <div class="doctrine-card secsy-card">
-            <h3>Replicas Converge Without Negotiation</h3>
-            <p>No consensus rounds. No elections. Just deterministic propagation.</p>
+        <div class="secsy-card">
+            <h3>Replicas Converge<br>Without Negotiation</h3>
+            <p>
+                No consensus rounds, no elections. Replicas converge through deterministic
+                propagation alone.
+            </p>
         </div>
 
-        <div class="doctrine-card secsy-card">
-            <h3>The System Starts Asserting</h3>
-            <p>The moment a system stops behaving like an organism and starts behaving like an instrument.</p>
+        <div class="secsy-card">
+            <h3>SECS<br>Assertion Starts</h3>
+            <p>
+                The system stops behaving like an organism and begins acting like an
+                instrument with a defined truth‑state.
+            </p>
+        </div>
+        <div class="secsy-card">
+            <h3>The Humans<br>Stay Aligned Too</h3>
+            <p>
+                When x = true, the system stops fighting itself — and so do the people around it.
+                In reality, my happiness, my family's happiness in SECS is x = true..
+            </p>
         </div>
 
     </div>
