--- a/secs-sovereign.html
+++ b/secs-sovereign.html
@@ -29,13 +29,17 @@
         .then(html => document.getElementById('nav').innerHTML = html);
     </script>
 
-  <main>
-    <h1>SECS Sovereign</h1>
-    <section>
+<main class="container doctrinal-surface with-nav-offset">
+
+        <h1 class="doctrine-title">SECS Sovereign</h1>
+  <div class="doctrine-grid">
+
+    <section class="secsy-card">
       <h2>What is SECS Sovereign?</h2>
       <p>SECS Sovereign is the official doctrine and substrate of SECS.observer, defining the principles, vision, and operational framework for sovereign, decentralized systems.</p>
     </section>
-    <section>
+
+    <section class="secsy-card"
       <h2>Doctrine & Substrate</h2>
       <p>The SECS Sovereign doctrine establishes the foundational beliefs and technical substrate for the SECS ecosystem. It is designed to ensure transparency, truth, and autonomy in all interactions and data flows.</p>
       <ul>
@@ -44,11 +48,12 @@
         <li>Open, verifiable protocols</li>
       </ul>
       <p>For a deeper dive, see our <a href="/doctrine.html">Doctrine</a> and <a href="/truth-model.html">Truth Model</a> pages.</p>
-    </section>
-    <section>
+
+    <section class="secsy-card">
       <h2>Vision & Future</h2>
       <p>SECS Sovereign aims to empower individuals and organizations to operate with full sovereignty, leveraging decentralized technologies for a more open and truthful digital world.</p>
       <p>Our roadmap includes expanding the SECS substrate, integrating new partners, and evolving our governance model.</p>
+
     </section>
     <section>
       <h2>Official Links</h2>
