--- a/truth-model.html
+++ b/truth-model.html
@@ -51,7 +51,7 @@
     <!-- Truth Model Surface -->
     <main class="container doctrinal-surface with-nav-offset">
 
-        <h1 class="doctrine-title">Truth Model</h1>
+        <h1 class="doctrine-title">x = true = Truth Model</h1>
         <p class="doctrine-subtitle">
             The formal definition of truth inside SECS Sovereign — the conditions under which 
             behaviour is valid, execution is permitted, and the substrate remains itself.
@@ -59,75 +59,150 @@
 
         <div class="doctrine-grid">
 
-            <section class="doctrine-card">
-                <h2>Truth as a Structural Property</h2>
-                <p>
-                    In SECS Sovereign, truth is not a value or belief. It is a structural property 
-                    of the substrate. A behaviour is true if and only if it satisfies all declared 
-                    invariants and preserves continuity.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Truth as a Structural Property</h2>
+    <p>
+        In SECS Sovereign, truth is not an opinion or an interpretation. It is a structural
+        property engineered into the substrate. A behaviour is true only when it satisfies
+        every declared invariant and extends continuity without distortion.
+    </p>
+    <p>
+        This definition wasn’t borrowed from philosophy — it emerged from the practical
+        need to build a system that cannot drift, lie, or contradict itself. Truth is the
+        substrate’s operating condition, not a negotiable concept.
+    </p>
+    <p>
+        When I say “x = true,” I mean the system has no alternative. Truth is the only
+        state in which SECS Sovereign can exist without collapsing.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Truth‑Condition Inputs</h2>
-                <p>
-                    Inputs are evaluated against doctrine before dispatch. If an input violates 
-                    invariants, it is rejected or collapsed. Only governed, invariant‑safe inputs 
-                    may enter the substrate.
-                </p>
-            </section>
 
-            <section class="doctrine-card">
-                <h2>Truth‑Condition Outputs</h2>
-                <p>
-                    Outputs are true when they are the deterministic result of governed inputs 
-                    under invariant‑preserving execution. No randomness, no drift, no probabilistic 
-                    behaviour is permitted.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Truth‑Condition Inputs</h2>
+    <p>
+        Every input is evaluated against doctrine before it is allowed to touch execution.
+        This is not validation — it is filtration. Inputs that violate invariants never
+        enter the substrate; they are rejected or collapsed at the boundary.
+    </p>
+    <p>
+        This ensures that governed execution begins from a clean state. No impurity,
+        nondeterminism, or malformed behaviour is permitted to seed drift.
+    </p>
+    <p>
+        If an input cannot satisfy truth‑conditions, it has no place inside SECS Sovereign.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Continuity as Truth</h2>
-                <p>
-                    Continuity is the substrate’s memory of itself. A state transition is true 
-                    when it extends continuity without contradiction, ambiguity, or loss of 
-                    narrative closure.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Truth‑Condition Inputs</h2>
+    <p>
+        Every input is evaluated against doctrine before it is allowed to touch execution.
+        This is not validation — it is filtration. Inputs that violate invariants never
+        enter the substrate; they are rejected or collapsed at the boundary.
+    </p>
+    <p>
+        This ensures that governed execution begins from a clean state. No impurity,
+        nondeterminism, or malformed behaviour is permitted to seed drift.
+    </p>
+    <p>
+        If an input cannot satisfy truth‑conditions, it has no place inside SECS Sovereign.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Purity as Truth</h2>
-                <p>
-                    Purity is the absence of impurity — nondeterminism, drift, fairness bleed, 
-                    topology dependence. A behaviour is true when it preserves purity across 
-                    execution windows.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Truth‑Condition Outputs</h2>
+    <p>
+        Outputs are considered true only when they are the deterministic result of
+        invariant‑safe inputs processed through governed execution. Nothing else qualifies.
+    </p>
+    <p>
+        There is no randomness, no probabilistic behaviour, and no hidden heuristics.
+        The substrate produces the same output for the same input, every time, under
+        every topology.
+    </p>
+    <p>
+        Truth is not inferred — it is produced through deterministic physics.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Collapse as Truth Enforcement</h2>
-                <p>
-                    Collapse is the mechanism by which the substrate restores truth. When behaviour 
-                    diverges, collapse eliminates impurity and re‑anchors the system to its 
-                    invariant truth‑state.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Continuity as Truth</h2>
+    <p>
+        Continuity is the substrate’s memory of itself — the unbroken chain of valid
+        state transitions. A transition is true only when it extends that chain without
+        contradiction or ambiguity.
+    </p>
+    <p>
+        This is how the system maintains narrative closure. Every state must make sense
+        in the context of the last, and every transition must preserve the story the
+        substrate is telling about itself.
+    </p>
+    <p>
+        Break continuity, and you break truth. The substrate will collapse before it
+        allows that to happen.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Truth‑State Integrity</h2>
-                <p>
-                    The substrate maintains a single global truth‑state. All workers, modes, and 
-                    execution paths must converge on the same truth‑state or collapse is triggered.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Purity as Truth</h2>
+    <p>
+        Purity is the absence of impurity — nondeterminism, drift, fairness bleed,
+        topology dependence, or any behaviour that introduces uncertainty.
+    </p>
+    <p>
+        A behaviour is true only when it preserves purity across execution windows.
+        If purity is lost, truth is lost with it.
+    </p>
+    <p>
+        Purity is not a goal; it is a requirement for the substrate to remain itself.
+    </p>
+</section>
 
-            <section class="doctrine-card">
-                <h2>Truth and Non‑Forkability</h2>
-                <p>
-                    Truth cannot be forked. The substrate’s truth‑state is singular, canonical, 
-                    and non‑replicable. Any attempt to fork truth results in collapse.
-                </p>
-            </section>
+<section class="secsy-card">
+    <h2>Collapse as Truth Enforcement</h2>
+    <p>
+        Collapse is not failure — it is enforcement. When behaviour diverges from truth,
+        the substrate collapses it to prevent impurity from propagating.
+    </p>
+    <p>
+        This mechanism ensures that drift never accumulates and that the system cannot
+        be coerced into false states.
+    </p>
+    <p>
+        Collapse is the substrate’s way of saying: “Truth is non‑optional.”
+    </p>
+</section>
+
+<section class="secsy-card">
+    <h2>Truth‑State Integrity</h2>
+    <p>
+        SECS Sovereign maintains a single global truth‑state. All workers, modes, and
+        execution paths must converge on this state or collapse is triggered.
+    </p>
+    <p>
+        This is how the substrate avoids forks, contradictions, and parallel realities.
+        There is only one truth, and everything must align with it.
+    </p>
+    <p>
+        Integrity is not maintained by consensus — it is enforced by invariants.
+    </p>
+</section>
+
+<section class="secsy-card">
+    <h2>Truth and Non‑Forkability</h2>
+    <p>
+        Truth cannot be forked. The substrate’s truth‑state is singular, canonical,
+        and non‑replicable. Any attempt to fork truth results in collapse.
+    </p>
+    <p>
+        This is not a licensing constraint — it is a physical one. The guarantees of
+        SECS Sovereign cannot be reproduced outside the governed substrate.
+    </p>
+    <p>
+        Truth is a property of the system, not an artifact that can be copied.
+    </p>
+</section>
 
         </div>
 
