--- a/x=true.html
+++ b/x=true.html
@@ -50,7 +50,7 @@
 
         <div class="doctrine-grid">
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Truth‑Condition Execution</h2>
                 <p>
                     SECS Sovereign executes only when all declared truth‑conditions hold. 
@@ -59,7 +59,7 @@
                 </p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Determinism Envelope</h2>
                 <p>
                     The substrate guarantees identical outputs for identical governed inputs 
@@ -68,7 +68,7 @@
                 </p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Collapse Correctness</h2>
                 <p>
                     Divergence is not tolerated. When behaviour deviates from the governed path, 
@@ -77,25 +77,17 @@
                 </p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Purity Preservation</h2>
                 <p>
-        <div id="nav"></div>
-        <script>
-            fetch('/nav.html')
-                .then(r => r.text())
-                .then(html => {
-                    document.getElementById('nav').innerHTML = html;
-                    if (window.initMenuToggle) window.initMenuToggle();
-                });
-        </script>
-        </script>
+        
+
                     cannot survive execution. The substrate rejects impurity at the boundary 
                     before it can propagate.
                 </p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Compliance With Computational Laws</h2>
                 <p>
                     SECS Sovereign adheres to foundational computer science laws: 
@@ -104,7 +96,7 @@
                 </p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Identity‑Free Fairness</h2>
                 <p>
                     Fairness is enforced without identity, tenancy, or routing metadata. 
@@ -113,7 +105,7 @@
                 </p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Topology‑Free Execution</h2>
                 <p>
                     Execution is invariant across worker topologies. No noisy neighbours, 
@@ -122,7 +114,7 @@
                 </p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Invariant Timing</h2>
                 <p>
                     Timing envelopes remain stable across load and time. The substrate’s 
@@ -131,7 +123,7 @@
                 </p>
             </section>
 
-            <section class="doctrine-card">
+            <section class="secsy-card">
                 <h2>Non‑Forkability</h2>
                 <p>
                     The substrate cannot be cloned or imitated. Its guarantees emerge from 
