--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 <section id="secsy" class="doctrinal-surface secsy-surface">
     <div class="doctrine-grid secsy-grid">
 
-        <div class="secsy-card secsy-header">
+        <div class="secsy-header">
             <h2 class="doctrine-title glitch-title" data-text="When SECS = true">
                 When<BR>SECS = true
             </h2>
@@ -389,14 +389,6 @@
             <p>
                 Replicas no longer wander. Zero‑drift becomes the natural state of
                 execution, not an achievement.
-            </p>
-        </div>
-
-        <div class="secsy-card">
-            <h3>Truth<br>Enforces Itself</h3>
-            <p>
-                Inputs are evaluated before entry. Outputs become deterministic by
-                design, eliminating probabilistic behaviour entirely.
             </p>
         </div>
 
@@ -439,6 +431,13 @@
             </p>
         </div>
 
+        <div class="secsy-card">
+            <h3>Truth<br>Enforces Itself</h3>
+            <p>
+                Inputs are evaluated before entry. Outputs become deterministic by
+                design, eliminating probabilistic behaviour entirely.
+            </p>
+        </div>
     </div>
 </section>
 
